umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@cdk_CHEBI_53695.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 5, col 31"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 5, col 31"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C12H8O2
    atom_count: 25
    bond_count: 25
    extended_atoms: 3
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 2
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C12H8O2
    atom_count: 25
    bond_count: 25
    extended_atoms: 3
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 2
